[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scenes/lemurGirl.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scripts/st2boss.gd" type="Script" id=2]
[ext_resource path="res://Theme/theme.tres" type="Theme" id=3]
[ext_resource path="res://Theme/fonts/NotoSerifJP-Regular.otf" type="DynamicFontData" id=5]

[sub_resource type="Animation" id=8]
resource_name = "flyIn"
length = 2.0
tracks/0/type = "bezier"
tracks/0/path = NodePath("lemurGirl:position:x")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 297, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("lemurGirl:position:y")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 128, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2 )
}

[sub_resource type="Animation" id=3]
resource_name = "fadeIn"
length = 2.0
tracks/0/type = "bezier"
tracks/0/path = NodePath("Background/ColorRect:color:r")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray(  ),
"times": PoolRealArray(  )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath("Background/ColorRect:color:g")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray(  ),
"times": PoolRealArray(  )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath("Background/ColorRect:color:b")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray(  ),
"times": PoolRealArray(  )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath("Background/ColorRect:color:a")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 0.180392, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 2 )
}

[sub_resource type="ShaderMaterial" id=2]

[sub_resource type="DynamicFont" id=7]
size = 30
outline_size = 3
outline_color = Color( 0.0745098, 0.14902, 0.403922, 1 )
font_data = ExtResource( 5 )

[node name="st2boss" type="Node2D"]
position = Vector2( 311, 128 )
script = ExtResource( 2 )

[node name="animations" type="AnimationPlayer" parent="."]
anims/flyIn = SubResource( 8 )

[node name="fadeIn" type="AnimationPlayer" parent="."]
anims/fadeIn = SubResource( 3 )

[node name="Start" type="Timer" parent="."]
one_shot = true

[node name="bull" type="Timer" parent="."]
wait_time = 6.0
one_shot = true

[node name="Shoot" type="Timer" parent="."]
one_shot = true

[node name="lemurGirl" parent="." instance=ExtResource( 1 )]

[node name="Background" type="CanvasLayer" parent="."]
layer = 4

[node name="ColorRect" type="ColorRect" parent="Background"]
material = SubResource( 2 )
margin_right = 1432.0
margin_bottom = 856.0
color = Color( 0.223529, 0, 0.376471, 0 )

[node name="GUI" type="CanvasLayer" parent="."]
layer = 10

[node name="Name" type="RichTextLabel" parent="GUI"]
margin_left = 48.0
margin_top = 24.0
margin_right = 624.0
margin_bottom = 66.0
rect_scale = Vector2( 0.8, 0.8 )
theme = ExtResource( 3 )
text = "Lemur girl"
scroll_active = false

[node name="HealthBar" type="ProgressBar" parent="GUI"]
margin_left = 48.0
margin_top = 56.0
margin_right = 624.0
margin_bottom = 76.0

[node name="SpellName" type="RichTextLabel" parent="GUI"]
anchor_left = 0.45
anchor_top = 0.025
anchor_right = 0.9
anchor_bottom = 0.04
margin_top = 3.0
margin_right = 40.0
margin_bottom = 40.4
rect_scale = Vector2( 0.8, 0.8 )
custom_fonts/normal_font = SubResource( 7 )
scroll_active = false

[connection signal="timeout" from="Start" to="." method="_on_Start_timeout"]
[connection signal="timeout" from="Shoot" to="." method="_on_Shoot_timeout"]
[connection signal="fightEnd" from="lemurGirl" to="." method="_on_OwlGirl_fightEnd"]
[connection signal="phase1End" from="lemurGirl" to="." method="_on_OwlGirl_phase1End"]
[connection signal="phase2End" from="lemurGirl" to="." method="_on_OwlGirl_phase2End"]
[connection signal="phase3End" from="lemurGirl" to="." method="_on_OwlGirl_phase3End"]
[connection signal="phase4End" from="lemurGirl" to="." method="_on_OwlGirl_phase4End"]
[connection signal="phase5End" from="lemurGirl" to="." method="_on_OwlGirl_phase5End"]
